[tool.poetry]
name = "dungeons-and-diagrams-solver"
version = "0.1.0"
description = ""
authors = ["Elle <elle.trudgett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
